# quant-portfolio

./: .gitignore  1.py  README.md  create-frontend-structure.js  docker-compose.yml  requirements.txt  setup.py  setup_streamlit.py
backend/: .env  Dockerfile  README.md  check_api_health.py  debug_env.py  fix_imports.py  pyproject.toml  test_backend.py  test_env.py  test_network.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  middleware.py
backend/app/api/endpoints/: advanced_optimization.py  analytics.py  assets.py  comparison.py  enhanced_analytics.py  historical.py  optimization.py  portfolios.py  reports.py  risk.py  scenarios.py  system.py
backend/app/core/domain/: asset.py  historical.py  metrics.py  optimization.py  portfolio.py  report.py  risk.py  scenario.py
backend/app/core/interfaces/: cache_provider.py  data_provider.py  notification_provider.py  report_generator.py  storage_provider.py
backend/app/core/services/: advanced_optimization.py  analytics.py  diversification.py  enhanced_analytics.py  error_handling.py  historical_service.py  monte_carlo.py  optimization.py  portfolio_comparison.py  report_service.py  risk_management.py  scenario_service.py  service_factory.py  time_series.py
backend/app/infrastructure/cache/: file_cache.py  memory_cache.py
backend/app/infrastructure/data/: alpha_vantage_provider.py  data_fetcher.py  market_data_provider.py  portfolio_manager.py  yahoo_finance_provider.py
backend/app/infrastructure/reports/: html_generator.py  pdf_generator.py  template_engine.py
backend/app/infrastructure/storage/: file_storage.py  json_storage.py  pickle_storage.py
backend/app/schemas/: analytics.py  asset.py  common.py  comparison.py  historical.py  optimization.py  portfolio.py  report.py  risk.py  scenario.py
backend/app/utils/: calculations.py  date_utils.py  file_utils.py  financial_utils.py  formatters.py  logging_utils.py  statistical_utils.py  validators.py
frontend/: .env  .env.local  .eslintrc.js  Dockerfile  README.md  nginx.conf  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  (+4 more)
investment_portfolio_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
streamlit_app/: app.py  diagnose_portfolios.py  streamlit_config.py  test_imports.py
(+436 files in other folders)
