[tool.poetry]
name = "investment-portfolio-management-system"
version = "1.0.0"
description = "Advanced system for investment portfolio management, analysis, and optimization"
authors = ["Wild Market Capital <info@wildmarketcapital.com>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^2.0.0"
pandas = "^2.0.0"
numpy = "^1.25.0"
scipy = "^1.11.0"
plotly = "^5.15.0"
yfinance = "^0.2.22"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.2"
weasyprint = "^59.0"
xlsxwriter = "^3.1.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas-datareader = "^0.10.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
pyportfolioopt = "^1.5.4"
loguru = "^0.7.0"
jwt = "^1.3.1"
aiofiles = "^23.1.0"
httpx = "^0.24.1"
bs4 = "^0.0.1"
arch = "^6.1.0"
empyrical = "^0.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
bandit = "^1.7.5"
pre-commit = "^3.3.3"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"
types-requests = "^2.31.0.1"
types-python-jose = "^3.3.4.7"
pandas-stubs = "^2.0.2.230605"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"